--- a/CREDITOS.html
+++ b/CREDITOS.html
@@ -17,42 +17,37 @@
 
     <img src="SEVEN LOGO NORMAL.png" width="130" height="130">
 
-     <a href="https://agencia-eight.vercel.app/HOME.html">
+    <a id="a1" href="https://seven-agency.vercel.app/HOME.html">
       <div class="btn btn-one">
         <span>HOME</span>
       </div>
     </a>
 
-    <a href="https://agencia-eight.vercel.app/EVENTOS.html">
+    <a href="https://seven-agency.vercel.app/EVENTOS.html">
       <div class="btn btn-one">
         <span>EVENTOS</span>
       </div>
     </a>
 
-    <a href="https://agencia-eight.vercel.app/CONTATOS.html">
+    <a href="https://seven-agency.vercel.app/CONTATOS.html">
       <div class="btn btn-one">
         <span>CONTATOS</span>
       </div>
     </a>
 
-    <a href="https://agencia-eight.vercel.app/CREDITOS.html">
+    <a href="https://seven-agency.vercel.app/CREDITOS.html">
       <div class="btn btn-one">
         <span>CREDITOS</span>
       </div>
     </a>
 
-    <a href="https://agencia-eight.vercel.app/FOTOS.html">
+    <a href="https://seven-agency.vercel.app/FOTOS.html">
       <div class="btn btn-one">
         <span>FOTOS</span>
       </div>
     </a>
 
-    <div1>
-      <p1>teste</p1>
-    </div1>
-
   </div>
-
 
 
   <div5>
