--- a/CREDITOS.html
+++ b/CREDITOS.html
@@ -65,7 +65,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1599566150163-29194dcaad36?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMjU1ODF8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="James.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Thiago Vanzo</p>
@@ -84,7 +84,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1580489944761-15a19d654956?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMzAyODV8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="Matias.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Mateus Toledo</p>
@@ -104,7 +104,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMzAxNzB8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="Larissa.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Larissa Emily</p>
@@ -124,7 +124,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1580489944761-15a19d654956?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMzAyODV8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="Bruna.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Bruna Elena</p>
@@ -143,7 +143,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1580489944761-15a19d654956?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMzAyODV8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="VulgoTata.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Otávio Franca</p>
@@ -158,7 +158,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1540569014015-19a7be504e3a?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMjU1ODF8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="Kauan.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Kauan Martineli</p>
@@ -175,7 +175,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1552058544-f2b08422138a?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMzAyMjl8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="Leticia.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Letícia Torres</p>
@@ -195,7 +195,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1615813967515-e1838c1c5116?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMzAyMjl8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="Rauan.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Rauan Barion</p>
@@ -212,7 +212,7 @@
             <article class="card" data-visible="false">
               <div class="card__front flow-content">
                 <img class="card__img mx-auto"
-                  src="https://images.unsplash.com/photo-1580489944761-15a19d654956?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODUwMzAyODV8&ixlib=rb-4.0.3&q=80&w=400"
+                  src="Thayna.JPG"
                   alt="John Smith (from Unsplash)" />
                 <div class="flow-content" data-spacing="sm">
                   <p class="card__name">Thayná Beatriz</p>
